# edge_model

./: .env.example  .gitignore  README.md  generate_condition_dependency_data.py  generate_condition_v2.py  generate_condition_v3.py  generate_condition_v4.py  pyproject.toml  requirements-training.txt  run_tests.py  sitecustomize.py  test_agent_loop_trace.py
agent/: __init__.py  observations.py  policy_eval.py  rollout_store.py  runtime.py  trajectory.py  verifier.py
configs/: eval.yaml  logging.yaml  models.yaml  project.yaml  rollout.yaml  routing.yaml  train_grpo.yaml  train_sft.yaml  verl_agent_loop.yaml
data_pipeline/: __init__.py  convert_react_to_quartet.py  run_all.py  stage4_classify.py  stage5_split.py  stage6_build_sft_parquet.py  tool_name_mapping.py
docs/: agent_runtime_deep_dive.md  agent_runtime_flow.md  agent_runtime_trace_report.md  pipeline_design_v1.md  pipeline_design_v2.md  verifier_training_deep_dive.md
envs/: __init__.py  namespace.py  sandbox_state.py  schemas.py  toolfactory.py
routing/: __init__.py  metrics.py  pool_writer.py  promotion.py  route_case.py  sampling_policy.py
schemas/: __init__.py  case_schema.py  env_schema.py  manifest_schema.py  reward_schema.py  route_schema.py  taxonomy.py  trajectory_schema.py  verifier_schema.py
scripts/: build_grpo.py  build_sft.py  build_training_data.sh  download_qwen3_8b.sh  run_agenticrl_stage.sh  run_sft_stage.sh  serve_vllm.sh  setup_env.sh  summarize_runs.py  train_grpo_verl.py  train_sft.py
train/: __init__.py  grpo_builder.py  reports.py  sft_builder.py  verl_agent_loop_adapter.py  (+1 more)
(+78 files in other folders)
