# 版权所有 © 2026 深圳途明智启科技有限公司。保留所有权利。
# 未经书面许可，任何单位或个人不得复制、传播、发布、转卖、改编、仿制或用于商业用途。
# 侵权必究。

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-posttrain-project"
version = "0.1.0"
description = "Phase 1 skeleton for after-sales Agentic RL post-training."
requires-python = ">=3.10"
dependencies = [
  "jinja2>=3.1",
  "pydantic>=2",
]

[project.optional-dependencies]
monitoring = [
  "tensorboard>=2.15",
  "wandb>=0.17",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "envs*", "schemas*", "routing*", "train*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
